--- a/public/app/templates/default/scss/_header.scss
+++ b/public/app/templates/default/scss/_header.scss
@@ -15,6 +15,7 @@ $topbar-dropdown-link-bg-hover: white;
 $topbar-dropdown-link-color: #020202;
 $topbar-menu-icon-color-toggled: #020202;
 $topbar-menu-link-color-toggled: #020202;
+$topbar-link-padding-medium: $topbar-height / 4;
 
 #nav {
   text-align: center;
@@ -31,9 +32,18 @@ $topbar-menu-link-color-toggled: #020202;
   width: 40px;
 }
 
+
+
+@media #{$medium-only} {
+  .top-bar-section ul li a {
+    padding-left: $topbar-link-padding-medium !important;
+    padding-right: $topbar-link-padding-medium !important;
+  }
+}
+
 @media #{$medium-up} {
   #nav-dropdown {
-    box-shadow: rgb(153, 153, 153) 0px 0px 6px 3px;
+    box-shadow: rgb(153, 153, 153) 0px 0px 4px 1px;
     margin-top: -15px;
     text-align: center;
   }
